Fixing crew spacing in safari

--- a/css/bboy.css
+++ b/css/bboy.css
@@ -93,7 +93,7 @@
 }
 
 .crewWrapper{
-	width: 1008px;
+	width: 1010px;
 	padding-top: 50px;
 	margin-left: auto;
 	margin-right: auto;
